@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.1066 2009-09-23 16:00:16 castaglia Exp $
+$Id: NEWS,v 1.1067 2009-09-28 21:27:27 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -48,6 +48,7 @@ CVS
 - Bug 3292 - "Incorrect MAC received on packet" error using AES CTR ciphers.
 - Bug 3293 - SFTPCipher arcfour256 does not work properly.
 - Bug 3294 - Support configurable HiddenStores prefixes.
+- Bug 3295 - proftpd segfaults when STAT is used with ListOptions "-1".
 
 1.3.3rc1 - Released 30-Jun-2009
 --------------------------------
